[package]
name = "meta"
version = "1.0.1"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-redis = "0.10"
actix-multipart = "0.4.0-beta.12" 
futures = "0.3.5"
awc = "3.0.0"
actix-form-data = "0.6.2"

mime = "0.3.16"
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-cors = "*"
actix-service = "*"
lazy_static = "*"
validator = "*"
validator_derive = "*"
reqwest = "*"
bytes = { version = "1.1", features = ["serde"] }
regex = "1.5.4"
actix-rt = "2.7"
derive_more = "0.99.5"
argonautica = "0.2.0"
futures-util = "0.3.5"
sailfish = "0.4.0"
sailfish-macros = "0.4.0"
external-ip = "4.1.0"
tokio = { version = "1.13.1", features = ["full"] }
web-local-storage-api = "*"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false